<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="8dp"
    android:orientation="vertical"
    tools:context=".MovieDetailsActivity">

    <ImageView
        android:id="@+id/img_detail"
        android:layout_width="match_parent"
        android:layout_height="250dp"
        android:scaleType="centerCrop"
        tools:src="@tools:sample/backgrounds/scenic" />

    <TextView
        android:id="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/title"
        android:layout_marginTop="8dp"
        android:textSize="25sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/title_desc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/the_title"
        android:textSize="25sp"
        android:textStyle="italic" />

    <TextView
        android:id="@+id/overview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/overview"
        android:textSize="20sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/overview_desc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/the_overview"
        android:maxLines="2"
        android:textSize="20sp" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="16dp">

        <ImageView
            android:id="@+id/img_rating"
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:src="@drawable/ic_stars" />

        <TextView
            android:id="@+id/rating"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:text="@string/rating" />

    </LinearLayout>
</LinearLayout>